Fix blurry edges and clean up

--- a/static/styles/_global.scss
+++ b/static/styles/_global.scss
@@ -164,14 +164,12 @@ $entries_lh: em(27px, $entries_fs);
 .daily {
 	padding-top: em(25px, $entries_fs);
 	padding-bottom: em(25px, $entries_fs);
-	//border-top: 1px solid $ll_gray;
-	border-bottom: 1px solid $l_gray;
-	.amt {
-		text-align: right;
-	}
 	// This is the separator between entries and totals
 	& > *:nth-last-child(2):not(.editing) .amount {
 		border-bottom: 2px dotted $gray;
+	}
+	.amt {
+		text-align: right;
 	}
 }
 
@@ -199,16 +197,19 @@ $entries_lh: em(27px, $entries_fs);
 	&:hover {
 		.remove { display: block; }
 	}
-	&:not(.editing):after {
-		content: '';
-		display: block;
-		position: absolute;
-		top: 0;
-		right: 0;
-		height: 100%;
-		width: em(70px, $entries_fs);
-		//@include background-image(linear-gradient(90deg, rgba($white, 0) 0%, $lll_gray 30%));
-		@include background-image(linear-gradient(90deg, rgba($white, 0) 0%, $white 30%));
+	// This makes ends of lines blurry so we know there's more to see
+	&:not(.editing) .note {
+		position: relative;
+		&:after {	
+			content: '';
+			display: block;
+			position: absolute;
+			top: 0;
+			right: 0;
+			height: 100%;
+			width: em(70px, $entries_fs);
+			@include background-image(linear-gradient(90deg, rgba($white, 0) 0%, $white 30%));
+		}
 	}
 	input {
 		width: 100%;
