--- a/static/styles/css/main.css
+++ b/static/styles/css/main.css
@@ -91,12 +91,11 @@ body {
 
 .daily {
   padding-top: 26.66667px;
-  padding-bottom: 26.66667px;
-  border-bottom: 1px solid #d1d1d1; }
-  .daily .amt {
-    text-align: right; }
+  padding-bottom: 26.66667px; }
   .daily > *:nth-last-child(2):not(.editing) .amount {
     border-bottom: 2px dotted #949494; }
+  .daily .amt {
+    text-align: right; }
 
 .daily-totals {
   line-height: 28.8px; }
@@ -120,16 +119,18 @@ body {
       margin-left: 0; }
   .entry:hover .remove {
     display: block; }
-  .entry:not(.editing):after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 74.66667px;
-    background-image: -webkit-linear-gradient(-360deg, rgba(255, 255, 255, 0) 0%, white 30%);
-    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, white 30%); }
+  .entry:not(.editing) .note {
+    position: relative; }
+    .entry:not(.editing) .note:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 74.66667px;
+      background-image: -webkit-linear-gradient(-360deg, rgba(255, 255, 255, 0) 0%, white 30%);
+      background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, white 30%); }
   .entry input {
     width: 100%;
     color: white; }
